# agent-playground

./: .env.example  .gitignore  Dockerfile  README.md  command_handler.py  config.py  logger_utils.py  main.py  pyproject.toml  rag_manager.py  requirements.txt  settings.py  tempCodeRunnerFile.py  test_emb.py  test_search.py  tool_manager.py  tools.py
rag_mem/: chroma.sqlite3
scripts/: install.bat  install.ps1  start.bat  start.ps1
src/: __init__.py  cli_app.py  command_handler.py  config.py  main.py  rag_manager.py  settings.py  timer.py  tool_manager.py  tools.py
src/agent/: graph.py  nodes.py  router.py  router_agent.py  state.py
src/llm/: base.py  llm_factory.py  ollama.py  openai_like.py
src/prompts/skills/: __init__.py  base.py  calculator.md  calculator.py  hong_kong_weather.md  hong_kong_weather.py  web_search_general.md  web_search_general.py
src/tools/: __init__.py  base.py  langchain_tools.py  manager.py  registry.py  toolBase.json  utils.py
src/tools/implementations/: python_sandbox.py  web_search.py
src/tts/: tts_model.py
src/ui/: base.py  cli_app.py  factory.py
test/: test_docker.py  test_search.py
test/features/: slash_commands.feature
test/features/steps/: command_steps.py
tests/features/steps/: __init__.py
