[project]
name = "my-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "ddgs>=9.11.4",
    "docker>=7.1.0",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "ollama>=0.6.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "coverage>=7.14.1",
    "pytest>=9.0.3",
]
